syntax = "proto3";

option csharp_namespace = "UserService";

import "google/protobuf/empty.proto";

message UserGrpcEntity {
  string role = 1;
  repeated string permissions = 2;
}

service CommunicationGrpcService {
  rpc GetUserByEmailAsync (string email) returns (User);
}


message RolePermissionsList {
  repeated RolePermissionsGrpcEntity role_permissions = 1;
}